--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
     </thead>
     <tbody>
       <tr>
-        <td>2017-2018</td>
-        <td>Recruiter at TravShoppy</td>
-      </tr>
-      <tr>
         <td>2018-2019</td>
         <td>Ecommerce Executive at MoreTasks</td>
+      </tr>
+      <tr>
+        <td>2017-2018</td>
+        <td>Recruiter at TravShoppy</td>
       </tr>
     </tbody>
   </table>
@@ -62,18 +62,38 @@
   <h3>Skills</h3>
   <table cellspacing="10">
     <tr>
+      <td>Front End Development</td>
+      <td>⭐️⭐️⭐️⭐️⭐️</td>
+    </tr>
+    <tr>
       <td>Web Development</td>
       <td>⭐️⭐️⭐️⭐️⭐️</td>
     </tr>
     <tr>
       <td>iOS Development</td>
       <td>⭐️⭐️⭐️</td>
+    <p> Other Skills </p>
+    <tr>
+      <td>Cooking</td>
+      <td>⭐️⭐️⭐️⭐️</td>
+    </tr>
     <tr>
       <td>Photography</td>
       <td>⭐️⭐️⭐️⭐️</td>
     </tr>
   </table>
   <hr>
+  <h3>Certificates</h3>
+  <a href="https://www.sololearn.com/Certificate/1014-1251450/pdf/">1. HTML </a>
+  <br>
+  <a href=""> 2. CSS </a>
+  <br>
+  <a href="https://www.sololearn.com/Certificate/1024-1251450/pdf/"> 3. JavaScript</a>
+  <br>
+  <a href="https://www.sololearn.com/Certificate/1059-1251450/pdf/"> 4. PHP</a>
+  <br>
+  <a href="https://www.sololearn.com/Certificate/1068-1251450/pdf/"> 5. Java</a>
+  <br>
   <!-- <form>
     <label>Name:</label>
     <input type="text" name="" value="">
