--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
     <tr>
       <td>iOS Development</td>
       <td>⭐️⭐️⭐️</td>
-    <p> Other Skills </p>
+    </tr>
+    <h4> Other Skills </h4>
     <tr>
       <td>Cooking</td>
       <td>⭐️⭐️⭐️⭐️</td>
