--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </tbody>
   </table>
   <hr>
-  <h3>Skills</h3>
+  <h3>Professional Skills</h3>
   <table cellspacing="10">
     <tr>
       <td>Front End Development</td>
@@ -73,7 +73,9 @@
       <td>iOS Development</td>
       <td>⭐️⭐️⭐️</td>
     </tr>
-    <h4> Other Skills </h4>
+    </table>
+    <h4>Other Skills</h4>
+    <table>
     <tr>
       <td>Cooking</td>
       <td>⭐️⭐️⭐️⭐️</td>
@@ -84,7 +86,7 @@
     </tr>
   </table>
   <hr>
-  <h3>Certificates</h3>
+  <h3>Professional Certificates</h3>
   <a href="https://www.sololearn.com/Certificate/1014-1251450/pdf/">1. HTML </a>
   <br>
   <a href=""> 2. CSS </a>
