--- a/index.html
+++ b/index.html
@@ -27,15 +27,19 @@
   <p>I am iOS and Web Developer. I love coding and brew my own coding.</p>
   <hr>
   <h3>Education</h3>
-  <ul>
+  <ul bullet="square">
     <li>
-      Lovely Professional University(B.Tech), Punjab
+      <a href="https://www.lpu.in">Lovely Professional University(B.Tech), Punjab</a>
+      <p>Graduated from this university holding the degree of B.Tech in Computer Science. This university lies between Jalandhar and Phagwara</p>
     </li>
     <li>
-      Red Rose School(CBSE), Jharkhand
+      <a href="https://www.redroseschooldeoghar.in">Red Rose School(CBSE), Jharkhand</a>
+      <p>Studied 11th and 12th here. Its suited in <strong> Deoghar</strong></p>
     </li>
     <li>
-      St. Teresa's School(ICSE), Bihar
+      <a href="http://www.stsbhagalpur.org">St. Teresa's School(ICSE), Bihar</a>
+      <p>Studied here from L.K.G to Std 10. 
+        From L.K.G to 4th class it is Junior Section situated in <strong>Bhagalpur</strong> town and the Senior Section at Aliganj. </p>
     </li>
   </ul>
   <hr>
