--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
-  <title>👩‍💻 Akanksha's Personal Site</title>
+  <title>👩‍💻 Akanksha's Personal Site </title>
   <link rel="stylesheet" href="css/styles.css">
   <!-- <style>
   body{
@@ -20,27 +21,28 @@
 -->
 </head>
 
-<body> <!--style="background-color: #a4efd3" is inline css-->
-  <img src="Akanksha_Image.jpg" alt="Akanksha Profile picture" width="180" height="300" />
+<body>
+  <center>
+  <!--style="background-color: #a4efd3" is inline css-->
+  <img src="Akanksha__Image.png" alt="Akanksha Profile picture" width="300" height="300" />
   <h1>Akanksha</h1>
   <p><em>Founder and CEO of</em> <strong><a href="file:///Users/akankshasingh/Documents/Web%20Development/My%20info/Index.html?">the AAA</a></strong>.</p>
-  <p>I am iOS and Web Developer. I love coding and brew my own coding.</p>
+  <p>I am an iOS and Web Developer. I love coding and brew my own coding.</p>
   <hr>
   <h3>Education</h3>
-  <ul bullet="square">
+  <ul>
     <li>
-      <a href="https://www.lpu.in">Lovely Professional University(B.Tech), Punjab</a>
-      <p>Graduated from this university holding the degree of B.Tech in Computer Science. This university lies between Jalandhar and Phagwara</p>
+      Lovely Professional University(B.Tech), Punjab
     </li>
+    <br>
     <li>
-      <a href="https://www.redroseschooldeoghar.in">Red Rose School(CBSE), Jharkhand</a>
-      <p>Studied 11th and 12th here. Its suited in <strong> Deoghar</strong></p>
+      Red Rose School(CBSE), Jharkhand
     </li>
+    <br>
     <li>
-      <a href="http://www.stsbhagalpur.org">St. Teresa's School(ICSE), Bihar</a>
-      <p>Studied here from L.K.G to Std 10. 
-        From L.K.G to 4th class it is Junior Section situated in <strong>Bhagalpur</strong> town and the Senior Section at Aliganj. </p>
+      St. Teresa's School(ICSE), Bihar
     </li>
+    <br>
   </ul>
   <hr>
   <h3>Work Experience</h3>
@@ -63,7 +65,7 @@
     </tbody>
   </table>
   <hr>
-  <h3>Professional Skills</h3>
+  <h3>Skills</h3>
   <table cellspacing="10">
     <tr>
       <td>Front End Development</td>
@@ -76,10 +78,7 @@
     <tr>
       <td>iOS Development</td>
       <td>⭐️⭐️⭐️</td>
-    </tr>
-    </table>
-    <h4>Other Skills</h4>
-    <table>
+      <p> Other Skills </p>
     <tr>
       <td>Cooking</td>
       <td>⭐️⭐️⭐️⭐️</td>
@@ -90,7 +89,7 @@
     </tr>
   </table>
   <hr>
-  <h3>Professional Certificates</h3>
+  <h3>Certificates</h3>
   <a href="https://www.sololearn.com/Certificate/1014-1251450/pdf/">1. HTML </a>
   <br>
   <a href=""> 2. CSS </a>
@@ -112,9 +111,15 @@
   </form>
   -->
 
-  <a href="Hobbies.html"><h3>My Hobbies</h3></a>
+  <a href="Hobbies.html">
+    <h3>My Hobbies</h3>
+  </a>
   <!--<a href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf">Download Cheatsheet</a> -->
   <hr>
-  <a href="Contact-Me.html"><h3>Contact Me</h3></a>
+  <a href="Contact-Me.html">
+    <h3>Contact Me</h3>
+  </a>
+</center>
 </body>
+
 </html>
